--- a/UI/index.html
+++ b/UI/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-inspired.css">
+    <link rel="stylesheet" href="style-qbcore.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div style="flex: 1;">
-                <h1 class="title">Your Server Name</h1>
+                <h1 class="title">Mystic Roleplay</h1>
             </div>
             <div class="gangs-section">
                 <div v-for="job in gangData" class="job-info" :style="getBoxShadow(job)">
